<resources>
    <string name="app_name">DriverCash</string>
    <string name="add_expense">agregar</string>
    <string name="home">Inicio</string>
    <string name="history">Historial</string>
    <string name="settings">Ajustes</string>
    <!-- Preference Titles -->
    <string name="messages_header">Preferencias</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="not_available_short">N/A</string>
    <string name="copiaDeSeguridad">Parece que no has iniciado sesión. Regístrate o inicia sesión para crear una copia de seguridad automática en la nube y acceder a tu información desde cualquier dispositivo.</string>
    <string name="restore_backup_title">Restaurar Copia de Seguridad</string>
    <string name="restore_backup_message">Se encontró una copia de seguridad en la nube con tus datos. ¿Deseas restaurarlos ahora?</string>
    <string name="restore_yes">Sí, Restaurar</string>
    <string name="restore_no_start_new">No, Empezar de Nuevo</string>
</resources>